// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QueryView matches snapshot 1`] = `
<div
  className="query-view app-view"
>
  <ColumnTree
    columnMetadataLoading={true}
    defaultSchema="druid"
    defaultWhere={
      SqlComparison {
        "decorator": undefined,
        "keywords": Object {
          "op": ">=",
        },
        "lhs": SqlRef {
          "columnRefName": RefName {
            "name": "__time",
            "quotes": false,
          },
          "keywords": Object {},
          "namespaceRefName": undefined,
          "spacing": Object {},
          "tableRefName": undefined,
          "type": "ref",
        },
        "not": false,
        "op": ">=",
        "rhs": SqlMulti {
          "args": SeparatedArray {
            "separators": Array [
              Separator {
                "left": " ",
                "right": " ",
                "separator": "-",
              },
            ],
            "values": Array [
              SqlFunction {
                "args": undefined,
                "decorator": undefined,
                "functionName": "CURRENT_TIMESTAMP",
                "keywords": Object {
                  "functionName": "CURRENT_TIMESTAMP",
                },
                "spacing": Object {},
                "specialParen": "none",
                "type": "function",
                "whereClause": undefined,
              },
              SqlInterval {
                "intervalValue": SqlLiteral {
                  "keywords": Object {},
                  "spacing": Object {},
                  "stringValue": "'1'",
                  "type": "literal",
                  "value": "1",
                },
                "keywords": Object {
                  "interval": "INTERVAL",
                },
                "spacing": Object {
                  "postInterval": " ",
                  "postIntervalValue": " ",
                },
                "type": "interval",
                "unit": "DAY",
              },
            ],
          },
          "keywords": Object {},
          "op": "-",
          "spacing": Object {},
          "type": "multi",
        },
        "spacing": Object {
          "postOp": " ",
          "preOp": " ",
        },
        "type": "comparison",
      }
    }
    getParsedQuery={[Function]}
    onQueryChange={[Function]}
  />
  <t
    customClassName=""
    onDragEnd={null}
    onDragStart={null}
    onSecondaryPaneSizeChange={[Function]}
    percentage={true}
    primaryIndex={0}
    primaryMinSize={30}
    secondaryInitialSize={60}
    secondaryMinSize={30}
    vertical={true}
  >
    <div
      className="control-pane"
    >
      <QueryInput
        currentSchema="druid"
        onQueryStringChange={[Function]}
        queryString="test"
        runeMode={false}
      />
      <div
        className="query-control-bar"
      >
        <Memo(RunButton)
          loading={true}
          onEditContext={[Function]}
          onExplain={[Function]}
          onHistory={[Function]}
          onPrettier={[Function]}
          onQueryContextChange={[Function]}
          onRun={[Function]}
          queryContext={Object {}}
          runeMode={false}
        />
        <Blueprint4.Tooltip2
          content="Automatically wrap the query with a limit to protect against queries with very large result sets."
          hoverCloseDelay={0}
          hoverOpenDelay={800}
          minimal={false}
          transitionDuration={100}
        >
          <Blueprint4.Switch
            checked={true}
            className="auto-limit"
            label="Auto limit"
            onChange={[Function]}
          />
        </Blueprint4.Tooltip2>
        <Memo(LiveQueryModeSelector)
          autoLiveQueryModeShouldRun={true}
          liveQueryMode="auto"
          onLiveQueryModeChange={[Function]}
        />
        <Memo(QueryTimer) />
      </div>
    </div>
    <div
      className="output-pane"
    >
      <Memo(Loader)
        cancelText="Cancel query"
        onCancel={[Function]}
      />
    </div>
  </t>
</div>
`;

exports[`QueryView matches snapshot with query 1`] = `
<div
  className="query-view app-view"
>
  <ColumnTree
    columnMetadataLoading={true}
    defaultSchema="druid"
    defaultWhere={
      SqlComparison {
        "decorator": undefined,
        "keywords": Object {
          "op": ">=",
        },
        "lhs": SqlRef {
          "columnRefName": RefName {
            "name": "__time",
            "quotes": false,
          },
          "keywords": Object {},
          "namespaceRefName": undefined,
          "spacing": Object {},
          "tableRefName": undefined,
          "type": "ref",
        },
        "not": false,
        "op": ">=",
        "rhs": SqlMulti {
          "args": SeparatedArray {
            "separators": Array [
              Separator {
                "left": " ",
                "right": " ",
                "separator": "-",
              },
            ],
            "values": Array [
              SqlFunction {
                "args": undefined,
                "decorator": undefined,
                "functionName": "CURRENT_TIMESTAMP",
                "keywords": Object {
                  "functionName": "CURRENT_TIMESTAMP",
                },
                "spacing": Object {},
                "specialParen": "none",
                "type": "function",
                "whereClause": undefined,
              },
              SqlInterval {
                "intervalValue": SqlLiteral {
                  "keywords": Object {},
                  "spacing": Object {},
                  "stringValue": "'1'",
                  "type": "literal",
                  "value": "1",
                },
                "keywords": Object {
                  "interval": "INTERVAL",
                },
                "spacing": Object {
                  "postInterval": " ",
                  "postIntervalValue": " ",
                },
                "type": "interval",
                "unit": "DAY",
              },
            ],
          },
          "keywords": Object {},
          "op": "-",
          "spacing": Object {},
          "type": "multi",
        },
        "spacing": Object {
          "postOp": " ",
          "preOp": " ",
        },
        "type": "comparison",
      }
    }
    getParsedQuery={[Function]}
    onQueryChange={[Function]}
  />
  <t
    customClassName=""
    onDragEnd={null}
    onDragStart={null}
    onSecondaryPaneSizeChange={[Function]}
    percentage={true}
    primaryIndex={0}
    primaryMinSize={30}
    secondaryInitialSize={60}
    secondaryMinSize={30}
    vertical={true}
  >
    <div
      className="control-pane"
    >
      <QueryInput
        currentSchema="druid"
        onQueryStringChange={[Function]}
        queryString="SELECT +3"
        runeMode={false}
      />
      <div
        className="query-control-bar"
      >
        <Memo(RunButton)
          loading={true}
          onEditContext={[Function]}
          onExplain={[Function]}
          onHistory={[Function]}
          onPrettier={[Function]}
          onQueryContextChange={[Function]}
          onRun={[Function]}
          queryContext={Object {}}
          runeMode={false}
        />
        <Blueprint4.Tooltip2
          content="Automatically wrap the query with a limit to protect against queries with very large result sets."
          hoverCloseDelay={0}
          hoverOpenDelay={800}
          minimal={false}
          transitionDuration={100}
        >
          <Blueprint4.Switch
            checked={true}
            className="auto-limit"
            label="Auto limit"
            onChange={[Function]}
          />
        </Blueprint4.Tooltip2>
        <Memo(LiveQueryModeSelector)
          autoLiveQueryModeShouldRun={true}
          liveQueryMode="auto"
          onLiveQueryModeChange={[Function]}
        />
        <Memo(QueryTimer) />
      </div>
    </div>
    <div
      className="output-pane"
    >
      <Memo(Loader)
        cancelText="Cancel query"
        onCancel={[Function]}
      />
    </div>
  </t>
</div>
`;
